upgrade jar version