@@ -70,18 +70,17 @@
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
     <maven.compiler.compilerVersion>${java.version}</maven.compiler.compilerVersion>
-    <argLine>-server -Xms256m -Xmx512m -Dfile.encoding=UTF-8 -Djava.net.preferIPv4Stack=true -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=512m</argLine>
-    <!--<java17ArgLine>&#45;&#45;add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED</java17ArgLine>-->
-    <java17ArgLine></java17ArgLine>
+    <argLine>-Dfile.encoding=UTF-8 -Djava.net.preferIPv4Stack=true</argLine>
+    <java9.module.argLine></java9.module.argLine>
 
     <spring-boot.version>2.7.18</spring-boot.version>
     <mapstruct.version>1.5.5.Final</mapstruct.version>
-    <guava.version>33.2.0-jre</guava.version>
+    <guava.version>33.2.1-jre</guava.version>
     <commons-collections4.version>4.4</commons-collections4.version>
     <commons-io.version>2.16.1</commons-io.version>
     <mybatis-spring-boot-starter.version>2.3.2</mybatis-spring-boot-starter.version>
     <jna-platform.version>5.14.0</jna-platform.version>
-    <curator-recipes.version>5.6.0</curator-recipes.version>
+    <curator-recipes.version>5.7.0</curator-recipes.version>
 
     <springdoc-openapi-ui.version>1.8.0</springdoc-openapi-ui.version>
     <mariaDB4j.version>2.5.3</mariaDB4j.version>
@@ -192,6 +191,15 @@
 
   <profiles>
     <profile>
+      <id>java9-module-exports</id>
+      <activation>
+        <jdk>[9,)</jdk>
+      </activation>
+      <properties>
+        <java9.module.argLine>--add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED</java9.module.argLine>
+      </properties>
+    </profile>
+    <profile>
       <id>develop</id>
       <activation>
         <activeByDefault>true</activeByDefault>
@@ -231,21 +239,6 @@
               </execution>
             </executions>
           </plugin>
-          <!--
-           <plugin>
-            Note: 加上会导致把可执行的jar包(如spring boot jar)deploy到sonatype上
-            Nexus-bug: https://issues.sonatype.org/browse/NEXUS-9138
-            <groupId>org.sonatype.plugins</groupId>
-            <artifactId>nexus-staging-maven-plugin</artifactId>
-            <version>1.6.13</version>
-            <extensions>true</extensions>
-            <configuration>
-              <serverId>ossrh</serverId>
-              <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
-              <autoReleaseAfterClose>false</autoReleaseAfterClose>
-            </configuration>
-          </plugin>
-          -->
         </plugins>
       </build>
     </profile>
@@ -347,28 +340,9 @@
           <compilerVersion>${java.version}</compilerVersion>
           <encoding>${file.encoding}</encoding>
           <compilerArgs>
-            <arg>${java17ArgLine}</arg>
+            <arg>${java9.module.argLine}</arg>
             <arg>-Xlint:unchecked,deprecation</arg>
           </compilerArgs>
-          <!--
-          <annotationProcessorPaths>
-            <path>
-              <groupId>org.projectlombok</groupId>
-              <artifactId>lombok</artifactId>
-              <version>${lombok.version}</version>
-            </path>
-            <path>
-              <groupId>org.mapstruct</groupId>
-              <artifactId>mapstruct-processor</artifactId>
-              <version>${mapstruct.version}</version>
-            </path>
-            <path>
-              <groupId>org.springframework.boot</groupId>
-              <artifactId>spring-boot-configuration-processor</artifactId>
-              <version>${spring-boot.version}</version>
-            </path>
-          </annotationProcessorPaths>
-          -->
         </configuration>
       </plugin>
       <plugin>
@@ -379,7 +353,7 @@
           <redirectTestOutputToFile>true</redirectTestOutputToFile>
           <forkCount>1</forkCount>
           <reuseForks>true</reuseForks>
-          <argLine>${java17ArgLine} ${argLine} ${jacocoArgLine}</argLine>
+          <argLine>${java9.module.argLine} ${argLine} ${jacocoArgLine}</argLine>
         </configuration>
       </plugin>
       <plugin>
